# vxl

./: .gitignore  Cargo.toml  build.rs  rust-toolchain.toml
assets/: worldgen.toml
assets/shaders/: block_overlay.wgsl  chunk.wgsl  crosshair.wgsl
src/: block.rs  block_overlay.rs  blocks.wgsl  camera.rs  chunk.rs  crosshair.rs  debug.rs  diagnostics.rs  direction.rs  direction.wgsl  main.rs  material.rs  materials.rs  offset.rs  physics.rs  player.rs  sets.rs  settings.rs  state.rs  texture.rs  textures.rs  toml_asset.rs  utils.wgsl  world.rs
src/block/: bundles.rs  components.rs  mod.rs
src/chunk/: bundles.rs  components.rs  direction.rs  material.rs  materials.rs  mod.rs  offset.rs  resources.rs  systems.rs
src/physics/: mod.rs  velocity.rs
src/player/: bundles.rs  mod.rs  systems.rs
src/plugins/: chunk.rs  mod.rs
src/position/: global_position.rs  local_position.rs  mod.rs  offset.rs
src/texture/: mod.rs  resources.rs  systems.rs  uv.rs
src/world/: db.rs  gen.rs  mesh.rs  mod.rs  spawn.rs
