[package]
name = "vxl"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.34.0", features = ["sync"] }
futures-lite = "2.1.0"
leafwing-input-manager = "0.11.1"
strum = { version = "0.25.0", features = ["derive"] }
noise = "0.8.2"

[dependencies.bevy]
version = "0.12.1"
default-features = false
features = [
	"bevy_asset",
	"bevy_pbr",
	"bevy_text",
	"bevy_winit",
	"default_font",
	"multi-threaded",
	"png"
]

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
