[package]
name = "vxl"
version = "0.1.0"
edition = "2021"

[dependencies]
array-init = "2.1.0"
itertools = "0.13.0"
leafwing-input-manager = "0.13"
strum = { version = "0.26.2", features = ["derive"] }

[dependencies.bevy]
version = "0.13"
default-features = false
features = ["bevy_pbr", "bevy_ui", "bevy_winit", "default_font", "multi-threaded", "png"]

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
